Add location autocomplete backend functions
